@@ -22,6 +22,8 @@ debci (1.4) UNRELEASED; urgency=medium
   * backends/lxc:
     - retry `apt-get update` until it works. Most of the time when the testbed
       setup fails on production is during `apt-get update`.
+  * "Platform-Specific issues" will now not consider tmpfail as an issue.
+    Those are already being tracked by "Status alerts".
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 03 Jun 2016 17:33:16 -0300
 
